[package]
name = "BrowserHistoryParser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.winresource]
FileDescription = "Browser History Parser"
ProductName = "Chromium-based Browsers History Parser"
LegalCopyright = "Copyright © 2024 - Mohd Khairulazam"
OriginalFilename = "BrowserHistoryParser.exe"

[build-dependencies]
winresource = "0.1.17"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
csv = "1.3.0"
anyhow = "1.0.80"
clap = "3.0"
xlsxwriter = "0.6.0"
